--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-<div id="logo-container">
+<!--div id="logo-container">
 <h1>Arte Geometrica</h1>
 <hr>
-</div>
+</div-->
 
 <div id="central">
     
